<resources>
    <string name="app_name">PayO</string>
    <string name="sign_up_screen_title">Hello</string>
    <string name="sign_up_screen_login_instead">Login</string>
    <string name="create_account_screen_welcome" />
    <string name="create_account_screen_full_name">Full Name</string>
    <string name="create_account_screen_email">Email</string>
    <string name="create_account_screen_password">Password</string>
    <string name="create_account_screen_confirm_password">Confirm Password</string>
    <string name="create_account_screen_phone_number">Phone Number</string>
    <string name="create_account_screen_username">Username</string>
    <string name="navigation_menu_profile">Profile</string>
    <string name="navigation_menu_logout">Logout</string>
    <string name="navigation_menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_screen_address">Address</string>
</resources>