<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.payo.HomeFragment"
        android:label="@string/navigation_menu_home"
        tools:layout="@layout/fragment_home">


    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.payo.ProfileFragment"
        android:label="@string/navigation_menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.payo.LoginActivity"
        android:label="@string/navigation_menu_logout"
        tools:layout="@layout/activity_login" />

</navigation>