<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"

   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Toolbar"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            >
            <ImageView
                android:id="@+id/createAccountBackArrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="create_account_screen_back_arrow_cd"
                android:src="@drawable/back_arrow_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textColor="@color/alternativeText"
                android:textSize="28sp"
                android:textStyle="bold"
                android:transitionName="welcome_transition"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/createAccountScreenCreateAccountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            android:background="@drawable/rounded_buttons"
            android:text="Create Account"
            android:textColor="@color/alternativeText"
            android:textSize="@dimen/mediumText"
            android:transitionName="create_account_transition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AddressTextInput" />

        <Button
            android:id="@+id/createAccountScreenLoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/largeMargin"
            android:background="@drawable/rounded_buttons"
            android:backgroundTint="@color/alternativeRoundedButtonsBg"
            android:text="@string/sign_up_screen_login_instead"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/mediumText"
            android:transitionName="login_transition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountScreenCreateAccountButton" />





        <ProgressBar
            android:id="@+id/createAccountScreenProgressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/progress_bar_background"
            android:elevation="16dp"
            android:padding="@dimen/mediumPadding"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountScreenFullNameTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="50dp"
            app:hintTextColor="@color/iconTint"
            app:boxStrokeColor="@color/iconTint"
            app:boxStrokeWidthFocused="@dimen/createAccountScreenBoxStrokeWidthFocused"
            app:endIconMode="clear_text"
            app:endIconTint="@color/iconTint"
            app:errorIconTint="@color/errorTint"
            app:errorTextColor="@color/errorTint"
            app:boxStrokeErrorColor="@color/errorTint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Toolbar"
            app:startIconDrawable="@drawable/pen_icon"
            app:startIconTint="@color/iconTint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createAccountScreenFullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_screen_full_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountScreenEmailTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            android:transitionName="email_transition"
            app:hintTextColor="@color/iconTint"
            app:boxStrokeColor="@color/iconTint"
            app:boxStrokeWidthFocused="@dimen/createAccountScreenBoxStrokeWidthFocused"
            app:endIconMode="clear_text"
            app:endIconTint="@color/iconTint"
            app:errorIconTint="@color/errorTint"
            app:errorTextColor="@color/errorTint"
            app:boxStrokeErrorColor="@color/errorTint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountScreenFullNameTextInput"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createAccountScreenEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_screen_email"
                android:inputType="textEmailAddress"
                android:transitionName="email_transition" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountScreenPasswordTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            android:transitionName="password_transition"
            app:hintTextColor="@color/iconTint"
            app:boxStrokeColor="@color/iconTint"
            app:boxStrokeWidthFocused="@dimen/createAccountScreenBoxStrokeWidthFocused"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/iconTint"
            app:errorIconTint="@color/errorTint"
            app:errorTextColor="@color/errorTint"
            app:boxStrokeErrorColor="@color/errorTint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountScreenEmailTextInput"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createAccountScreenPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_screen_password"
                android:inputType="textPassword"
                android:transitionName="password_transition" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createAccountScreenConfirmPasswordTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            app:hintTextColor="@color/iconTint"
            app:boxStrokeColor="@color/iconTint"
            app:boxStrokeWidthFocused="@dimen/createAccountScreenBoxStrokeWidthFocused"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/iconTint"
            app:errorIconTint="@color/errorTint"
            app:errorTextColor="@color/errorTint"
            app:boxStrokeErrorColor="@color/errorTint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountScreenPasswordTextInput"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createAccountScreenConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_screen_confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            app:hintTextColor="@color/iconTint"
            app:boxStrokeColor="@color/iconTint"
            app:boxStrokeWidthFocused="@dimen/createAccountScreenBoxStrokeWidthFocused"
            app:endIconTint="@color/iconTint"
            app:errorIconTint="@color/errorTint"
            app:errorTextColor="@color/errorTint"
            app:boxStrokeErrorColor="@color/errorTint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountScreenConfirmPasswordTextInput"
            app:startIconDrawable="@drawable/phone_icon"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_screen_phone_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AddressTextInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginStart="@dimen/largeMargin"
            app:hintTextColor="@color/iconTint"
            app:boxStrokeColor="@color/iconTint"
            app:boxStrokeWidthFocused="@dimen/createAccountScreenBoxStrokeWidthFocused"
            app:endIconTint="@color/iconTint"
            app:errorIconTint="@color/errorTint"
            app:errorTextColor="@color/errorTint"
            app:boxStrokeErrorColor="@color/errorTint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber"
            app:startIconDrawable="@drawable/home_icon"
            app:startIconTint="@color/iconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AddressEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_account_screen_address"
                android:inputType="textLongMessage|textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
